--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 <meta name="description" content="シャッフルランチやレクリエーションなどのランダムなメンバーのグループ分け(チーム分け)にご活用ください。">
 <meta name="keywords" content="グループ分け,チーム分け,シャッフル,ランダム">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="shortcut icon" href="./assets/favicon.ico">
 <link rel="stylesheet" href="./assets/css/vendor/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="./assets/css/style.css">
 </head>
